--- a/virtualview/build.gradle
+++ b/virtualview/build.gradle
@@ -34,7 +34,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:3.0.0'
     }
 }
 
@@ -107,7 +107,7 @@ dependencies {
     compile 'com.android.support:support-v4:26.0.2@aar'
     compile 'com.android.support:support-compat:26.0.2@aar'
     compile 'com.android.support:support-annotations:26.0.2'
-    compile('com.alibaba.android:virtual-common:1.0.11') {
+    provided('com.alibaba.android:virtual-common:1.0.11') {
         changing = true
     }
     compile 'com.android.support:recyclerview-v7:26.0.2@aar'
